add test and some interview stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/netbeans,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=netbeans,java
+# Created by https://www.toptal.com/developers/gitignore/api/java,netbeans
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,netbeans
 
 ### Java ###
 # Compiled class file
@@ -36,5 +36,4 @@ dist/
 nbdist/
 .nb-gradle/
 
-# End of https://www.toptal.com/developers/gitignore/api/netbeans,java
-/KeithShintaku/target/
+# End of https://www.toptal.com/developers/gitignore/api/java,netbeans
